objects/Case.object
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <businessProcesses>
        <fullName>Praxis Customer Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer Feedback</fullName>
        </values>
        <values>
            <fullName>Awaiting Partner feedback</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Customer Responded</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Work Ongoing</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Thread_ID__c</fullName>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>The Case Owner&apos;s Name</description>
        <formula>IF(Left(OwnerId, 3)=&apos;005&apos;, Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName,      
    Owner:Queue.QueueName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Case Owner&apos;s Name</inlineHelpText>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <description>Select why the case was closed.
When selecting &quot;Stale case cleanup&quot;, customer communication e-mail will not be sent.</description>
        <inlineHelpText>Select why the case was closed.
When selecting &quot;Stale case cleanup&quot;, customer communication e-mail will not be sent.</inlineHelpText>
        <label>Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issue resolved</fullName>
                </value>
                <value>
                    <fullName>Bug fixed</fullName>
                </value>
                <value>
                    <fullName>Training provided</fullName>
                </value>
                <value>
                    <fullName>Feature/Functionality Delivered</fullName>
                </value>
                <value>
                    <fullName>No action required</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
                <value>
                    <fullName>Stale case cleanup</fullName>
                </value>
                <value>
                    <fullName>Duplicate Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Case Contact&apos;s full name</description>
        <formula>Contact.FirstName&amp;&quot; &quot;&amp;Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Case Contact&apos;s full name</inlineHelpText>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <description>Date only (no time)</description>
        <formula>Text(DateValue(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date only (no time)</inlineHelpText>
        <label>Date Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slack_Channel__c</fullName>
        <formula>IF(
    AND(
            NOT(ISBLANK(AccountId)),
            NOT(ISBLANK(Account.Slack_Channel__c))
    ), Account.Slack_Channel__c,
    &quot;#Support&quot;
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will contain the account&apos;s Slack Channel, if one is defined, or default to &quot;#Support&quot; if none is defined, or no account is set on the case.</inlineHelpText>
        <label>Slack Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_on_My_Account__c</fullName>
        <description>The Account ID on the case matches the account for the current user</description>
        <formula>$User.Account_ID__c ==  AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Account ID on the case matches the account for the current user</inlineHelpText>
        <label>Case on My Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Close_Comments__c</fullName>
        <description>Use this field to note any comments about the resolution. These will be communicated to the customer</description>
        <inlineHelpText>Use this field to note any comments about the resolution. These will be communicated to the customer</inlineHelpText>
        <label>Case Close Comments</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>I_am_Owner_or_Contact__c</fullName>
        <description>This is true if the case owner&apos;s email OR the case contact email match the current user&apos;s email</description>
        <formula>OR(
   $User.Email == Owner:User.Email,
   $User.Email ==  Contact.Email 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is true if the case owner&apos;s email OR the case contact email match the current user&apos;s email</inlineHelpText>
        <label>I am Owner or Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_comments_Long_txt__c</fullName>
        <description>Hidden field using automation for work description in Kanban</description>
        <inlineHelpText>This should not be seen on the page layout.</inlineHelpText>
        <label>Case comments_Long txt</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <validationRules>
        <fullName>External_User_Close_Comment_Only</fullName>
        <active>true</active>
        <description>External Users Can Only Close Case.</description>
        <errorConditionFormula>NOT(ISPICKVAL($User.UserType,&quot;Standard&quot;)) &amp;&amp;
NOT(ISPICKVAL(Status,&quot;Closed&quot;)) &amp;&amp; 
NOT(ISPICKVAL(Status,&quot;Customer Responded&quot;)) &amp;&amp; 
NOT(ISPICKVAL(Status,&quot;New&quot;))</errorConditionFormula>
        <errorMessage>External Users Can Only Close Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_close_case_when_assigned_to_queue</fullName>
        <active>false</active>
        <errorConditionFormula>AND(LEFT(OwnerId, 3) == &apos;00G&apos;,
    ISPICKVAL(Status, &apos;Closed&apos;)
)</errorConditionFormula>
        <errorMessage>Cannot close a case when it is assigned to a queue. Please change owner first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_provide_close_reason_at_case_close</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    IsClosed,
    PRIORVALUE(IsClosed)=false,
    ISBLANK(TEXT(Close_Reason__c))
)</errorConditionFormula>
        <errorMessage>When closing a case, you must provide close reason</errorMessage>
    </validationRules>
</CustomObject>